# vivid-onnx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  addon.json  library.json  module.json
.github/workflows/: ci.yml  release.yml
examples/face-detection/: chain.cpp
examples/pose-tracking/: chain.cpp
include/vivid/ml/: face_detector.h  ml.h  onnx_model.h  pose_detector.h
include/vivid/onnx/: face_detector.h  onnx.h  onnx_model.h  pose_detector.h
showcase/: IDEAS.md
src/: face_detector.cpp  onnx_model.cpp  operator_registrations.cpp  pose_detector.cpp
tests/: CMakeLists.txt  test_inference.cpp  test_onnx_inference.cpp  test_pose_detector.cpp  test_tensor.cpp
